cc/gpu: Ensure consistent PaintCache state on op serialization failure.

The ClientPaintCache assumes that once an entry has been added to its
state tracking, it is guarenteed to be transferred to the service side
cache and is removed only when explicitly purged.

This assumption is not true in the case where serializing an op fails
due to insufficient memory. In this scenario, the memory is remapped
and the op is re-serialized but any changes made to the
ClientPaintCache state, supposed to be a mirror of the service side
state, are not actually made to the service side state. This cause the
Client and Service PaintCaches to get in an inconsistent state and we
fail to raster the tile due to deserialization failures.

Avoid this by tracking the serialized cache entries in a pending list
that is committed only when the data is guarenteed to be transferred to
the service, and discarded otherwise.

R=enne@chromium.org, ericrk@chromium.org

Bug: 912282
Change-Id: I96d4108acb4903ce0ff48b54718c65b61805e103
Reviewed-on: https://chromium-review.googlesource.com/c/1393138
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Eric Karl <ericrk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619622}
Former-commit-id: 9192c6f341d55098b34a3254ed9938307b00fabe